# tinykit

./: .gitignore  Cargo.toml  README.md  samconfig.toml  template.yaml
lambdas/confirm_subscription/: Cargo.toml  build.rs
lambdas/confirm_subscription/src/: main.rs
lambdas/email_opened/: Cargo.toml
lambdas/email_opened/src/: main.rs
lambdas/form_rendering/: Cargo.toml
lambdas/form_rendering/src/: main.rs
lambdas/send_confirmation/: Cargo.toml  build.rs
lambdas/send_confirmation/src/: main.rs
lambdas/subscribe/: Cargo.toml
lambdas/subscribe/src/: main.rs
lambdas/unsubscribe/: Cargo.toml
rust_app/: Cargo.toml
sam_env/: Cargo.toml
sam_env/src/: lib.rs
shared/: Cargo.toml
shared/src/: lib.rs
