[package]
name = "confirm_subscription"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
shared = { path = "../../shared" }
lambda_http = "0.11.1"
tokio = { version = "1", features = ["macros"] }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.31.1"
aws-sdk-s3 = "1.31.1"
serde_json = { version = "1.0.117" }
jsonwebtoken = { version = "9", default-features = false }
