[package]
name = "subscribe"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
validators = { version = "0.25.3", features = [
  "email",
  "derive",
], default-features = false }
lambda_http = "0.11.1"
serde = "1.0.203"
tokio = { version = "1", features = ["macros"] }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.31.1"
cuid = "1.3.2"
aws-sdk-sqs = "1.29.1"
serde_json = { version = "1.0.117" }
